--- a/practice1/src/sass/style.scss
+++ b/practice1/src/sass/style.scss
@@ -12,7 +12,14 @@
 
 // @import 'sprites/icon';
 
-// @import "components/header";
+@import "components/header";
+@import "components/logo";
+@import "components/intro";
+@import "components/input";
+@import "components/button";
+@import "components/subscribe";
+
+
 
 @import 'layout/grid';
 @import 'layout/layout';
