--- a/practice1/src/view/metadata/_head.ejs
+++ b/practice1/src/view/metadata/_head.ejs
@@ -1,6 +1,6 @@
 <meta name="description" content="">
 <meta name="keywords" content="">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta property="og:locale" content="ja_JP">
 <meta property="fb:admins" content="">
