added footer module

--- a/practice1/src/sass/style.scss
+++ b/practice1/src/sass/style.scss
@@ -18,8 +18,11 @@
 @import "components/input";
 @import "components/button";
 @import "components/subscribe";
+@import "components/sitemap";
+@import "components/snss";
 
 
 
 @import 'layout/grid';
 @import 'layout/layout';
+@import 'layout/footer';
