--- a/practice1/src/index.ejs
+++ b/practice1/src/index.ejs
@@ -11,6 +11,7 @@
     <% include view/modules/_intro %>
     <% include view/modules/_subscribe %>
   </main>
+  <% include view/modules/_footer %>
 <script src="assets/js/app.js" async></script>
 </body>
 </html>
