completed subscribe module

--- a/practice1/src/sass/lib/_flex.scss
+++ b/practice1/src/sass/lib/_flex.scss
@@ -26,7 +26,7 @@
   box-pack: justify;
 }
 .flex-space-around {
-  justify-content: space-between;
+  justify-content: space-around;
   flex-pack: justify;
   box-pack: justify;
 }
