--- a/practice1/src/sass/_setting.scss
+++ b/practice1/src/sass/_setting.scss
@@ -4,7 +4,8 @@ $font-smoothing: antialiased;
 //auto,optimizeSpeed,optimizeLegibility,geometricPrecision
 $text-rendering: auto;
 
-$base-font-family: "游ゴシック", YuGothic, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
+$base-font-family:'Open Sans', sans-serif;
+$secondary-font-family: 'Poppins', sans-serif;
 $base-font-size: 14px;
 $base-font-color:hsl(208, 11%, 55%);
 $base-background-color: #fff;
@@ -14,8 +15,8 @@ $color-secondary: hsl(192, 100%, 9%);
 
 //$color-accent
 
-$breakpoint-tablet: 1279px;
-$breakpoint-mobile: 759px;
+$breakpoint-tablet: 648px;
+$breakpoint-mobile: 480px;
 
 //path
 $path-image: "../images/";
