--- a/practice1/src/sass/components/_intro.scss
+++ b/practice1/src/sass/components/_intro.scss
@@ -7,15 +7,17 @@
     }
 
     &-title {
-        font-size: 3em;
+        font-size: 2.8em;
         font-weight: 700;
+        font-family: $secondary-font-family;
         color: $color-secondary;
     }
     &-desc {
         font-size: 1.4em;
         font-weight: 400;
-        padding: 0 3em;
+        padding: 0 5em;
         text-align: center;
         margin-bottom: 2em;
+        line-height: 1.8em;
     }
 }
