--- a/practice1/src/view/metadata/_head.ejs
+++ b/practice1/src/view/metadata/_head.ejs
@@ -14,5 +14,7 @@
 <link rel="shortcut icon" href="assets/images/common/favicon.ico">
 <link rel="apple-touch-icon-precomposed" href="assets/images/common/apple-touch-icon-precomposed.png">
 <link rel="stylesheet" href="assets/css/style.css">
-
+<style>
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Poppins');
+</style>
 <script> document.documentElement.className = document.documentElement.className.replace("no-js","js");</script>
